# nixnox

./: .gitignore  Dockerfile  README.md  TODO.md  database.md  justfile  pyproject.toml  requirements.txt  web.py  web_app.py
.streamlit/: config.toml
pages/: data_entry.py  download.py  home.py  obsdetails.py  observation.py  observer.py  organization.py  plot.py  plot_alex.py  upload.py
pages/adm/: location.py  observer.py  photometer.py
src/nixnox/: _version.py
src/nixnox/cli/dbase/: ecsv.py  loader.py  populate.py  schema.py
src/nixnox/cli/util/: parser.py  validators.py
src/nixnox/lib/: __init__.py  ecsv.py  location.py  table.py
src/nixnox/lib/dbase/: model.py
src/nixnox/lib/ecsv/: __init__.py  excp.py  sqm.py  tas.py
src/nixnox/web/: dbase.py  mpl.py  streamlit.py
src/nixnox/web/page/: home.py  observation.py  observer.py  plot.py  upload.py
src/nixnox/web/page/admin/: location.py  observation.py
